# zcash_tx_tool

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-demo  Dockerfile-nu5  Dockerfile-zebra  If I get  README.md  build.rs  example_config.toml  fetch-params.sh  pr-diff.patch  regtest-config-nu5.toml  regtest-config.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: README.md  block-data-test-ci.yaml  cache-demo-ci.yaml  ci-to-ecr.yaml  dependabot-auto-close.yml  dependabot-auto-merge.yml  docker-build.yaml  lints.yml  main-ci.yaml  push-ecr.yaml  push-to-ecr.yaml  run-tx-tool.yaml  rust.yml  update-versions.yaml  zebra-test-ci.yaml
.run/: Test Orchard ZSA.run.xml  Test Orchard.run.xml  Test.run.xml
docs/: tx_tool_docker_setup.md
infra/: README.md
infra/terraform-aws-modules/: README.md
infra/terraform-aws-modules/ecr-public/: main.tf
infra/terragrunt-aws-environments/: Makefile  README.md
infra/terragrunt-aws-environments/dev/: account.hcl
infra/terragrunt-aws-environments/dev/eu-central-1/zsa/: env.hcl
infra/terragrunt-aws-environments/dev/eu-central-1/zsa/ecr-tx-tool/: terragrunt.hcl
infra/terragrunt-aws-environments/dev/eu-central-1/zsa/ecr-tx-tool-public/: terragrunt.hcl
migrations/block_cache_init/: down.sql  up.sql
migrations/block_data_init/: down.sql  up.sql
migrations/wallet_init/: down.sql  up.sql
scripts/: scrape_zsa_blocks.py
src/: application.rs  commands.rs  components.rs  config.rs  lib.rs  model.rs  prelude.rs  schema.rs  util.rs
src/commands/: balance.rs  burn.rs  clean.rs  demo.rs  demo_orchard_zsa.rs  get_block_data.rs  issue.rs  mine.rs  shield.rs  sync.rs  test.rs  test_asset_swaps.rs  test_balances.rs  test_config.rs  test_issue_one.rs  test_orchard.rs  test_orchard_zsa.rs  test_orchard_zsa_with_finalization.rs  test_persistence_part1.rs  test_persistence_part2.rs  test_scenario_1.rs  test_three_party.rs  test_three_party_multi_user.rs  transfer.rs
src/components/: block_cache.rs  block_commitment.rs  block_data.rs  db.rs  miner.rs  persistance.rs  persistence.rs  rpc_client.rs  transactions.rs  tree_state.rs  user.rs  wallet.rs  zebra_merkle.rs
src/components/persistance/: model.rs  sqlite.rs
src/components/persistence/: block_data.rs  model.rs  sqlite.rs  user.rs
src/components/rpc_client/: mock.rs  reqwest.rs
src/components/transactions/: regtest_v5.rs
src/components/wallet/: structs.rs
tests/: acceptance.rs
zcutil/: fetch-params.sh
