[package]
name = "zcash_tx_tool"
authors = []
version = "0.4.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = "4"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Diesel ORM
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"

# Zcash
incrementalmerkletree = "0.8.2"
bridgetree = "0.7.0"
byteorder = "1"

orchard = "0.11.0"
zcash_primitives = { version = "0.25.0", features = ["transparent-inputs", "non-standard-fees"] }
zcash_protocol = { version = "0.6.2" }
zcash_note_encryption = "0.4.1"
zcash_encoding = "0.3.0"
zcash_address = "0.9.0"
zcash_client_backend = "0.20.0"
zcash_proofs = "0.25.0"

serde_json = "1.0.105"
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
blake2b_simd = "=1.0.1"
bip0039 = "0.12.0"
nonempty = "0.11.0"

# - Transparent inputs
zcash_transparent = { version = "0.5.0", features = ["transparent-inputs"] }
ripemd = { version = "0.1" }
sha2 = "0.10"
secp256k1 = { version = "0.29.1" }

[dependencies.abscissa_core]
version = "0.7.0"

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"

[lints.rust]
non_local_definitions = "allow"

[patch.crates-io]
orchard = { git = "https://github.com/QED-it/orchard", rev = "f6d87925c6ad32675790b828736f7321f85ecfe8" }
sapling-crypto = { git = "https://github.com/QED-it/sapling-crypto", rev = "03b1e1644c7a65c8764741fe787114dd2349a2f5" }
zcash_note_encryption = { git = "https://github.com/zcash/zcash_note_encryption", rev = "9f7e93d42cef839d02b9d75918117941d453f8cb" }
zcash_primitives = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_protocol = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_address = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_client_backend = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_proofs = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_encoding = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_transparent = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }

halo2_gadgets = { git = "https://github.com/zcash/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
halo2_proofs = { git = "https://github.com/zcash/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
sinsemilla = { git = "https://github.com/zcash/sinsemilla", rev = "aabb707e862bc3d7b803c77d14e5a771bcee3e8c" }
