[package]
name = "zcash_tx_tool"
authors = []
version = "0.5.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = "4"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Diesel ORM
diesel = { version = "2.3.8", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2"

# Zcash
incrementalmerkletree = "0.8.2"
bridgetree = "0.7.0"

orchard = { version = "0.12.0", features = ["zsa-issuance"] }
zcash_primitives = { version = "0.26.1", features = ["transparent-inputs", "non-standard-fees", "zsa-issuance", "zip-233"] }
zcash_protocol = { version = "0.7.2" }
zcash_encoding = "0.3.0"
zcash_proofs = "0.26.1"
zip32 = "0.2"

serde_json = "1.0.149"
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.6"
blake2b_simd = "=1.0.1"
bip0039 = "0.12.0"
nonempty = "0.11.0"

# - Transparent inputs
zcash_transparent = { version = "0.6.3", features = ["transparent-inputs"] }
ripemd = { version = "0.1" }
sha2 = "0.10"
secp256k1 = { version = "0.29.1" }

[dependencies.abscissa_core]
version = "0.7.0"

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
tempfile = "3"
once_cell = "1.21"

[lints.rust]
non_local_definitions = "allow"

[patch.crates-io]
orchard = { git = "https://github.com/QED-it/orchard", rev = "77d3274cb1f4620e9a1b86477c490fa123dff6bd" }
sapling-crypto = { git = "https://github.com/QED-it/sapling-crypto", rev = "59535fb5d34b5c5cf1b20ef18269f5c65228378c" }
zcash_note_encryption = { git = "https://github.com/zcash/zcash_note_encryption", rev = "9f7e93d42cef839d02b9d75918117941d453f8cb" }
zcash_primitives = { git = "https://github.com/QED-it/librustzcash", rev = "0ea737548f7aea6124056df54d55f6c5a35ef914" }
zcash_protocol = { git = "https://github.com/QED-it/librustzcash", rev = "0ea737548f7aea6124056df54d55f6c5a35ef914" }
zcash_address = { git = "https://github.com/QED-it/librustzcash", rev = "0ea737548f7aea6124056df54d55f6c5a35ef914" }
zcash_proofs = { git = "https://github.com/QED-it/librustzcash", rev = "0ea737548f7aea6124056df54d55f6c5a35ef914" }
zcash_encoding = { git = "https://github.com/QED-it/librustzcash", rev = "0ea737548f7aea6124056df54d55f6c5a35ef914" }
zcash_transparent = { git = "https://github.com/QED-it/librustzcash", rev = "0ea737548f7aea6124056df54d55f6c5a35ef914" }
sinsemilla = { git = "https://github.com/zcash/sinsemilla", rev = "aabb707e862bc3d7b803c77d14e5a771bcee3e8c" }
halo2_proofs = { git = "https://github.com/zcash/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
halo2_poseidon = { git = "https://github.com/zcash/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
zcash_spec = { git = "https://github.com/QED-it/zcash_spec", rev = "d5e84264d2ad0646b587a837f4e2424ca64d3a05" }
